--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,7 @@
             
             <!-- Results Section -->
             <div class="results-section">
+                <h5>Results</h5>
                 <div id="resultsArea" style="display: none;">
                     <div class="chart-container">
                         <canvas id="netWorthChart"></canvas>
@@ -141,7 +142,7 @@
                             </table>
                         </div>
                     </div>
-                    <div class="additional-info">
+                    <div class="additional-info mt-4 mb-4">
                         <h5>Additional Information</h5>
                         <div class="table-container">
                             <table class="table">
