--- a/templates/index.html
+++ b/templates/index.html
@@ -6,17 +6,6 @@
     <title>House vs Stocks Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
-    <style>
-        body {
-            zoom: 1;
-            transform: scale(1);
-            transform-origin: 0 0;
-            -webkit-transform: scale(1);
-            -webkit-transform-origin: 0 0;
-            -moz-transform: scale(1);
-            -moz-transform-origin: 0 0;
-        }
-    </style>
 </head>
 <body>
     <div class="page-wrapper">
@@ -35,7 +24,7 @@
                         </div>
                         <div class="form-group">
                             <label for="house_cost">House Cost (€)</label>
-                            <small class="form-text text-muted d-block mb-2">Your share of the house price if shared.</small>
+                            <small class="form-text text-muted d-block mb-2">Your share of the house price, if you will be buying a house together.</small>
                             <input type="number" class="form-control" id="house_cost" value="{{ config.DEFAULT_HOUSE_COST }}" required>
                         </div>
                         <div class="form-group">
@@ -43,8 +32,8 @@
                             <input type="number" class="form-control" id="monthly_rent" value="{{ config.DEFAULT_MONTHLY_RENT }}" required>
                         </div>
                         <div class="form-group">
-                            <label for="monthly_savings_capacity">Monthly Savings Capacity (€)</label>
-                            <small class="form-text text-muted d-block mb-2">Income after lvi saving.</small>
+                            <label for="monthly_savings_capacity">Monthly Savings (€)</label>
+                            <small class="form-text text-muted d-block mb-2">Remaining income after all expenses and rent, available for investing.</small>
                             <input type="number" class="form-control" id="monthly_savings_capacity" value="{{ config.DEFAULT_MONTHLY_SAVINGS_CAPACITY}}" required>
                         </div>
                         <div class="form-group">
@@ -68,6 +57,10 @@
                                         <div class="form-group">
                                             <label for="min_down_payment_percent">Minimum Down Payment (%)</label>
                                             <input type="number" class="form-control" id="min_down_payment_percent" value="15" min="0" max="100" step="1" required>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="house_purchase_fees_percent">Notary fees etc. associated with buying a house (%)</label>
+                                            <input type="number" class="form-control" id="house_purchase_fees_percent" value="7" min="0" max="20" step="1" required>
                                         </div>
                                         <div class="form-group">
                                             <label for="house_inflation">House Price Inflation Rate (%)</label>
