fixed some labels in the table

--- a/templates/index.html
+++ b/templates/index.html
@@ -147,25 +147,19 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Initial Investment Growth</td>
+                                            <td>Growth of Initial Savings</td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                         </tr>
                                         <tr>
-                                            <td>Monthly Savings Growth</td>
+                                            <td>Growth of Monthly Savings</td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                         </tr>
                                         <tr>
                                             <td>House Value</td>
-                                            <td class="text-end">-</td>
-                                            <td class="text-end"></td>
-                                            <td class="text-end"></td>
-                                        </tr>
-                                        <tr>
-                                            <td>Remaining Mortgage</td>
                                             <td class="text-end">-</td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
