--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#explainerContent">
-                            <strong>Explainer & Assumptions</strong> (click to read)
+                            <strong>Explainer & Assumptions</strong> -> Click to Read
                         </button>
                     </h2>
                     <div id="explainerContent" class="accordion-collapse collapse" data-bs-parent="#explainerAccordion">
