--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@
                                 <table class="table">
                                     <thead>
                                         <tr>
-                                            <th>Component</th>
+                                            <th></th>
                                             <th>Rent + Invest</th>
                                             <th>Max Mortgage</th>
                                             <th>Min Mortgage</th>
@@ -157,25 +157,25 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Growth of Initial Savings</td>
+                                            <td><strong>Growth of Initial Savings</strong></td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                         </tr>
                                         <tr>
-                                            <td>Growth of Monthly Savings</td>
+                                            <td><strong>Growth of Monthly Savings</strong></td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                         </tr>
                                         <tr>
-                                            <td>House Value</td>
+                                            <td><strong>House Value</strong></td>
                                             <td class="text-end">-</td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                         </tr>
                                         <tr class="table-primary">
-                                            <th>Net Worth</th>
+                                            <th><strong>Net Worth</strong></th>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
@@ -190,7 +190,7 @@
                                 <table class="table">
                                     <thead>
                                         <tr>
-                                            <th>Component</th>
+                                            <th></th>
                                             <th>Rent + Invest</th>
                                             <th>Max Mortgage</th>
                                             <th>Min Mortgage</th>
@@ -198,19 +198,19 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Total Interest + Purchase Costs</td>
+                                            <td><strong>Total Interest + Purchase Costs</strong></td>
                                             <td class="text-end">-</td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                         </tr>
                                         <tr>
-                                            <td>Total Rent Paid</td>
+                                            <td><strong>Total Rent Paid</strong></td>
                                             <td class="text-end"></td>
                                             <td class="text-end">-</td>
                                             <td class="text-end">-</td>
                                         </tr>
                                         <tr>
-                                            <td>Average Monthly Housing Cost</td>
+                                            <td><strong>Average Monthly Housing Cost</strong></td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
                                             <td class="text-end"></td>
