--- a/templates/index.html
+++ b/templates/index.html
@@ -118,12 +118,12 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="house_inflation">House Price Inflation Rate (%)</label>
-                                            <small class="form-text text-muted d-block mb-2">The inflation rate of the house price. Average increase rate over the last 30 years is 3.5% for US</small>
+                                            <small class="form-text text-muted d-block mb-2">The inflation rate of the house price. Average increase rate over the last 30 years is 3.5% for US.</small>
                                             <input type="number" class="form-control" id="house_inflation" value="{{ config.DEFAULT_HOUSE_PRICE_INFLATION * 100 }}" step="0.1">
                                         </div>
                                         <div class="form-group">
                                             <label for="investment_return">Investment Return Rate (%)</label>
-                                            <small class="form-text text-muted d-block mb-2">Your expected yearly return on your investments. Average over last 30 years is 9% for US</small>
+                                            <small class="form-text text-muted d-block mb-2">Your expected yearly return on your investments. Should be bank interest rate if not planning to invest. Average for US stock market over last 30 years is 9%.</small>
                                             <input type="number" class="form-control" id="investment_return" value="{{ config.DEFAULT_INVESTMENT_RETURN * 100 }}" step="0.1">
                                         </div>
                                         <div class="form-group">
@@ -132,7 +132,7 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="cpi">Consumer Price Inflation (%)</label>
-                                            <small class="form-text text-muted d-block mb-2">The inflation rate of the goods and services you consume. Average yearly inflation rate over the last 30 years is 2.5% for US</small>
+                                            <small class="form-text text-muted d-block mb-2">The inflation rate of the goods and services you consume. Average yearly inflation rate over the last 30 years is 2.5% for US.</small>
                                             <input type="number" class="form-control" id="cpi" value="{{ config.DEFAULT_CPI * 100 }}" step="0.1">
                                         </div>
                                     </div>
